# pipeline-etl-completo

./: .gitignore  README.md  pyproject.toml
